# aiohttp-underscore-apis

./: .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  test.py
aiohttp_underscore_apis/: __init__.py  _cat.py  context.py  core.py  middlewares.py  settings.py  stats.py  types.py
aiohttp_underscore_apis/_cat/: __init__.py  options.py  test_options.py
aiohttp_underscore_apis/apis/: common.py  filter_path.py  test_common.py  test_filter_path.py
aiohttp_underscore_apis/apis/_cat/: __init__.py  base.py  handlers.py  helpers.py  options.py  test_base.py  test_helpers.py  test_options.py
aiohttp_underscore_apis/apis/_routes/: __init__.py  handlers.py
demos/: demo_aiohttp_underscore_apis.ipynb
